--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "financial quotes api",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix client && npm run build --prefix client"
   },
   "author": "Richard Jean-Baptiste",
   "license": "ISC",
