--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "finance-api",
   "version": "1.0.0",
   "description": "financial quotes api",
+  "engines": {
+    "node": "16.x"
+  },
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
