--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "finance-api",
   "version": "1.0.0",
   "description": "financial quotes api",
+  "homepage": ".",
   "engines": {
     "node": "16.x"
   },
