--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.0.0",
     "connect-timeout": "^1.9.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "dotenv": "^10.0.0",
